--- a/aplicacion/templates/editar_lactante.html
+++ b/aplicacion/templates/editar_lactante.html
@@ -22,47 +22,66 @@ $def with (lactante, areas)
             </div>
         </header>
         <main class="flex-grow w-full max-w-2xl mx-auto">
-            <form method="post" class="bg-white rounded-2xl p-8 shadow-lg">
+            <form method="post" action="/editar_lactante/$lactante[0]" class="bg-white rounded-2xl p-8 shadow-lg">
                 <h2 class="text-2xl font-bold text-[#6a003f] mb-6 text-center">Editar datos del lactante</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mb-6">
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Apellido paterno</label>
-                        <input type="text" name="apellido_paterno" value="" placeholder="Ej: Pérez" class="w-full border rounded px-3 py-2" required>
+                        <input type="text" name="apellido_paterno" value="$lactante[1]" placeholder="Ej: Pérez" class="w-full border rounded px-3 py-2" required>
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Apellido materno</label>
-                        <input type="text" name="apellido_materno" value="" placeholder="Ej: Gómez" class="w-full border rounded px-3 py-2">
+                        <input type="text" name="apellido_materno" value="$lactante[2]" placeholder="Ej: Gómez" class="w-full border rounded px-3 py-2">
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Fecha de nacimiento</label>
-                        <input type="date" name="fecha_nacimiento" value="" class="w-full border rounded px-3 py-2" required>
+                        <input type="date" name="fecha_nacimiento" value="$lactante[3]" class="w-full border rounded px-3 py-2">
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Género</label>
-                        <select name="genero" class="w-full border rounded px-3 py-2" required>
-                            <option value="">Selecciona género</option>
-                            <option value="Masculino">Masculino</option>
-                            <option value="Femenino">Femenino</option>
+                        <select name="genero" class="w-full border rounded px-3 py-2">
+                            $if lactante[4] == 'Masculino':
+                                <option value="">$lactante[4]</option>
+                                <option value="Femenino">Femenino</option> 
+                            $if lactante[4] == 'Femenino':
+                                <option value="">$lactante[4]</option>
+                                <option value="Masculino">Masculino</option>
+                            $else:
+                                <option value="">Seleccione un genero</option>
+                                <option value="Masculino">Masculino</option>
+                                <option value="Femenino">Femenino</option> 
                         </select>
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Estado</label>
-                        <input type="text" name="estado" value="" placeholder="Ej: Activo" class="w-full border rounded px-3 py-2">
+                        <select name="estado" class="w-full border rounded px-3 py-2">
+                            $if lactante[5] == 'Activo':
+                                <option value="">$lactante[5]</option>
+                                <option value="Inactivo">Inactivo</option> 
+                            $if lactante[5] == 'Inactivo':
+                                <option value="">$lactante[5]</option>
+                                <option value="Inactivo">Activo</option>
+                            $else:
+                                <option value="">Seleccione un estado</option>
+                                <option value="Inactivo">Activo</option>
+                                <option value="Inactivo">Inactivo</option>
+
+                        </select>
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Discapacidad</label>
-                        <input type="text" name="discapacidad" value="" placeholder="Ej: Ninguna" class="w-full border rounded px-3 py-2">
+                        <input type="text" name="discapacidad" value="$lactante[6]" placeholder="Ej: Ninguna" class="w-full border rounded px-3 py-2">
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Peso</label>
-                        <input type="number" step="0.01" name="peso" value="" placeholder="Ej: 8.5" class="w-full border rounded px-3 py-2">
+                        <input type="number" step="0.01" name="peso" value=$lactante[7] placeholder="Ej: 8.5" class="w-full border rounded px-3 py-2">
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Área</label>
-                        <select name="id_area" class="w-full border rounded px-3 py-2" required>
-                            <option value="">Selecciona área</option>
-                            <option value="1">Pediatría</option>
-                            <option value="2">Neonatología</option>
+                        <select name="id_area" class="w-full border rounded px-3 py-2">
+                            <option value=$lactante[8]>$lactante[14]</option>
+                            $for area in areas:
+                                <option value=$area[0]>$area[1]</option>
                         </select>
                     </div>
                 </div>
@@ -71,19 +90,19 @@ $def with (lactante, areas)
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mb-6">
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Nombre</label>
-                        <input type="text" name="nombre_madre" value="" placeholder="Ej: María" class="w-full border rounded px-3 py-2">
+                        <input type="text" name="nombre_madre" value="$lactante[10]" placeholder="Ej: María" class="w-full border rounded px-3 py-2">
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Apellido paterno</label>
-                        <input type="text" name="apellido_paterno_madre" value="" placeholder="Ej: López" class="w-full border rounded px-3 py-2">
+                        <input type="text" name="apellido_paterno_madre" value="$lactante[11]" placeholder="Ej: López" class="w-full border rounded px-3 py-2">
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Apellido materno</label>
-                        <input type="text" name="apellido_materno_madre" value="" placeholder="Ej: Ramírez" class="w-full border rounded px-3 py-2">
+                        <input type="text" name="apellido_materno_madre" value="$lactante[12]" placeholder="Ej: Ramírez" class="w-full border rounded px-3 py-2">
                     </div>
                     <div>
                         <label class="block text-[#6a003f] font-semibold mb-1">Discapacidad</label>
-                        <input type="text" name="discapacidad_madre" value="" placeholder="Ej: Ninguna" class="w-full border rounded px-3 py-2">
+                        <input type="text" name="discapacidad_madre" value="$lactante[13]" placeholder="Ej: Ninguna" class="w-full border rounded px-3 py-2">
                     </div>
                 </div>
                 <div class="flex justify-center mt-8">
